# SignLanguageTranslator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
Notebooks/: experiments.ipynb
SignLanguageTranslator/datasets/: d-F_person205_front.csv  hand_d-F_person205_front.csv  hand_نانی_person205_front.csv  pose_نانی_person205_front.csv
SignLanguageTranslator/notebooks/: experiments.ipynb  visualization_demo.ipynb
SignLanguageTranslator/text/: preprocess.py
SignLanguageTranslator/utils/: __init__.py  _tree.py  concatenate.py  dataIO.py  landmarksInfo.py  plot3d.py  preprocess.py  transforms.py  videoPreprocessing.py  visualization.py
SignLanguageTranslator/vision/: concatenate.py  preprocess.py  transforms.py  visualization.py
notebooks/: concatenate_demo.ipynb  dataloader_demo.ipynb  experiments.ipynb  google_drive.ipynb  research_paper_assets.ipynb  transforms_demo.ipynb  visualization_demo.ipynb
utils/: visualization.py
