[build-system]
requires = ["hatchling>=1.10.0"]
build-backend = "hatchling.build"

[project]
name = "SignLanguageTranslator"
version = "0.1.0"
readme = "README.md"
description = "Translate between text and sign language using AI"
author = "Mudassar Iqbal"
url = "https://github.com/mdsrqbl"

[tool.pytest.ini_options]
addopts = "-v "
filterwarnings = [
    "ignore::DeprecationWarning",
]