[build-system]
requires = ["hatchling>=1.10.0"]
build-backend = "hatchling.build"

[project]
name = "SignLanguageTranslator"
version = "0.2.1"
readme = "README.md"
description = "Translate between text and sign language using AI"
authors = ["Mudassar Iqbal <mdsr.qbl@gmail.com>"]
url = "https://github.com/mdsrqbl"
repository = "https://github.com/mdsrqbl/SignLanguageTranslator"
keywords = ["sign", "translation", "pose", "pakistan"]

[tool.pytest.ini_options]
addopts = "-v "
filterwarnings = [
    "ignore::DeprecationWarning",
]